--- a/package.json
+++ b/package.json
@@ -7,16 +7,18 @@
     "dev": "nodemon -r tsconfig-paths/register src/app.ts",
     "build": "tsc && tscpaths -p tsconfig.json -s ./src -o ./dist",
     "tsc": "tsc"
-
   },
   "dependencies": {
     "axios": "^1.6.7",
     "debug": "~2.6.9",
+    "dotenv": "^16.4.5",
     "express": "~4.16.1",
-    "http-errors": "~1.6.3"
+    "http-errors": "~1.6.3",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.24",
     "nodemon": "^3.1.0",
     "ts-node": "^10.7.0",
